...
          TTSService.speakCalculation(
            _calculator.currentExpression.isEmpty ? '0' : _calculator.currentExpression,
            _calculator.currentResult,
          );
        }
        break;
      case 'M+':
        _calculator.memoryAdd();
        break;
      case 'M-':
        _calculator.memorySubtract();
        break;
      case 'MR':
        _calculator.memoryRecall();
        break;
      case 'MC':
        _calculator.memoryClear();
        break;
      case 'sin':
      case 'cos':
      case 'tan':
      case 'log':
      case 'ln':
      case '√':
      case '∛':
...
